# influx-con

./: .bumpversion.cfg  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
influx_con/: fluxc.py  idbccclient.py  library.py  test_measurement.py  utils.py
influx_con/config/: fluxc.conf
