## Config file for package building and installation.
## More information at:
##    https://setuptools.pypa.io/en/latest/userguide/quickstart.html
## Install requirements via $ pip install .
## Install extra test requirements via $ pip install .[tests]

[metadata]
name = influx-con
version = 0.1.2

description = "InfluxDB Connetor CLI Client"
author = armin.saur@rz.uni-freiburg.de
author_email = armin.saur@rz.uni-freiburg.de
url = https://gitlab.kit.edu/kit/scc/bwcloud/utils/influx-con.git


[options]
# List of source subfolders, to include into this package.
packages = influx_con
include_package_data = True
python_requires = >=3.9

# Use influx client version 1, 'influxdb'
install_requires =
  argparse
  pyyaml
  influxdb

[options.extras_require]
# Requirements for testing the package.
tests=
  pytest
  flake8
  flake8-docstrings
  flake8-docstrings-complete
  bumpversion


[options.entry_points]
# Set cli hook
console_scripts =
  fluxc = influx_con.fluxc:main

